--- a/MyMailBox/Properties/launchSettings.json
+++ b/MyMailBox/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "launchUrl": "Color",
+      "launchUrl": "MailBox/Create",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
